src/Test/Fixtures/Good/Types/noSpacesParamTypeDeclaration.lf
let theta:param=Param("phi");