src/Test/Fixtures/Bad/Types/unexpectedSecondParamInInferredDeclaration.lf
let theta = param("theta") param("gamma");